data/collection/fixes/descriptions/java/JDK-8020286
Compiling this example:

class Test {
   void m(String s) { }
   void m(Integer i, String s) { }
   void test() {
	   m(1, 1);
   }
}

Gives the following simplified message:

Test.java:608: error: method m in class Test cannot be applied to given types;
	   m(1, 1);
	   ^
  required: String
  found: int,int
  reason: actual and formal argument lists differ in length
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output

This is not good, as the simplified diagnostic is showing the wrong method!